--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "reinholdjesse/components",
+    "name": "reinholdjesse/core",
     "autoload": {
         "psr-4": {
-            "Reinholdjesse\\Components\\": "src/"
+            "Reinholdjesse\\Core\\": "src/"
         }
     },
     "authors": [
@@ -14,7 +14,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Reinholdjesse\\Components\\ComponentServiceProvider"
+                "Reinholdjesse\\Core\\CoreServiceProvider"
             ]
         }
     },
