--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
             ]
         }
     },
-    "minimum-stability": "dev-main",
+    "minimum-stability": "dev",
     "require": {
         "laravel/jetstream": "^2.12",
         "livewire/livewire": "^2.6"
