--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,10 @@
             ]
         }
     },
-    "minimum-stability": "dev",
     "require": {
         "laravel/jetstream": "^2.12",
         "livewire/livewire": "^2.6"
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
