--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@alpinejs/focus": "^3.12.0",
         "livewire-sortable": "^0.2.2",
         "tinymce": "^6.2.0"
     }
